[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Velizar Hristov <velizar.hristov@67bricks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1"
path = "src/1.rs"

[[bin]]
name = "1_part_two"
path = "src/1_2.rs"

[[bin]]
name = "2"
path = "src/2.rs"
